added missing value treatment and cleaned categorical columns

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -250,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -262,14 +262,94 @@
           ]
         },
         {
-          "ename": "NameError",
-          "evalue": "name 'df_eda' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 36\u001b[39m\n\u001b[32m     34\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m colname \u001b[38;5;129;01min\u001b[39;00m categorical_cols:\n\u001b[32m     35\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m---- \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m ----\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m     \u001b[43mdf_eda\u001b[49m.select(colname).distinct().show(truncate=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-            "\u001b[31mNameError\u001b[39m: name 'df_eda' is not defined"
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+----------------+\n",
+            "|REMOTE_TYPE_NAME|\n",
+            "+----------------+\n",
+            "|Remote          |\n",
+            "|On Premise      |\n",
+            "|Hybrid          |\n",
+            "|Undefined       |\n",
+            "+----------------+\n",
+            "\n",
+            "\n",
+            "---- EMPLOYMENT_TYPE_NAME ----\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+--------------------+\n",
+            "|EMPLOYMENT_TYPE_NAME|\n",
+            "+--------------------+\n",
+            "|Flexible            |\n",
+            "|Fulltime            |\n",
+            "|Parttime            |\n",
+            "+--------------------+\n",
+            "\n",
+            "\n",
+            "---- EDUCATION_LEVELS_NAME ----\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Stage 62:>                                                         (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+---------------------------------------------------------------------------------------------+\n",
+            "|EDUCATION_LEVELS_NAME                                                                        |\n",
+            "+---------------------------------------------------------------------------------------------+\n",
+            "|\"Bachelor's degree\"                                                                          |\n",
+            "|\"Master's degree\",  \"Ph.D. or professional degree\"                                           |\n",
+            "|\"High school or GED\",  \"Associate degree\"                                                    |\n",
+            "|\"High school or GED\",  \"Bachelor's degree\",  \"Master's degree\"                               |\n",
+            "|\"Bachelor's degree\",  \"Master's degree\"                                                      |\n",
+            "|\"Bachelor's degree\",  \"Master's degree\",  \"Ph.D. or professional degree\"                     |\n",
+            "|\"High school or GED\",  \"Associate degree\",  \"Bachelor's degree\"                              |\n",
+            "|\"Master's degree\"                                                                            |\n",
+            "|\"Associate degree\",  \"Bachelor's degree\"                                                     |\n",
+            "|\"High school or GED\",  \"Bachelor's degree\"                                                   |\n",
+            "|\"High school or GED\"                                                                         |\n",
+            "|\"No Education Listed\"                                                                        |\n",
+            "|\"Associate degree\"                                                                           |\n",
+            "|\"Associate degree\",  \"Bachelor's degree\",  \"Master's degree\"                                 |\n",
+            "|\"Ph.D. or professional degree\"                                                               |\n",
+            "|\"Bachelor's degree\",  \"Ph.D. or professional degree\"                                         |\n",
+            "|\"High school or GED\",  \"Bachelor's degree\",  \"Ph.D. or professional degree\"                  |\n",
+            "|\"Associate degree\",  \"Bachelor's degree\",  \"Master's degree\",  \"Ph.D. or professional degree\"|\n",
+            "|\"High school or GED\",  \"Associate degree\",  \"Bachelor's degree\",  \"Master's degree\"          |\n",
+            "+---------------------------------------------------------------------------------------------+\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
           ]
         }
       ],
