--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -172,34 +172,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 33,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "                                                                                \r"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "+--------+--------------------+--------------------+-----------------------------+----------------------+----------------+--------+-------------+-------------------+----------------------+---------------------------+\n",
-            "|SALARY  |MIN_YEARS_EXPERIENCE|MAX_YEARS_EXPERIENCE|EDUCATION_LEVELS_NAME        |EMPLOYMENT_TYPE_NAME  |REMOTE_TYPE_NAME|DURATION|IS_INTERNSHIP|COMPANY_IS_STAFFING|median_salary_emp_type|median_salary_emp_type_name|\n",
-            "+--------+--------------------+--------------------+-----------------------------+----------------------+----------------+--------+-------------+-------------------+----------------------+---------------------------+\n",
-            "|116500.0|2                   |2                   |[\\n  \"Bachelor's degree\"\\n]  |Full-time (> 32 hours)|[None]          |6       |0            |0                  |116500                |116500                     |\n",
-            "|116500.0|7                   |7                   |[\\n  \"No Education Listed\"\\n]|Full-time (> 32 hours)|[None]          |18      |0            |1                  |116500                |116500                     |\n",
-            "|116500.0|1                   |1                   |[\\n  \"No Education Listed\"\\n]|Full-time (> 32 hours)|[None]          |8       |0            |1                  |116500                |116500                     |\n",
-            "|116500.0|1                   |1                   |[\\n  \"Bachelor's degree\"\\n]  |Full-time (> 32 hours)|[None]          |32      |0            |0                  |116500                |116500                     |\n",
-            "|131100.0|2                   |2                   |[\\n  \"Bachelor's degree\"\\n]  |Full-time (> 32 hours)|[None]          |11      |0            |0                  |116500                |116500                     |\n",
-            "+--------+--------------------+--------------------+-----------------------------+----------------------+----------------+--------+-------------+-------------------+----------------------+---------------------------+\n",
-            "only showing top 5 rows\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "from pyspark.sql.functions import col, pow\n",
@@ -223,21 +198,6 @@
         "\n",
         "# Cast Duration to integer\n",
         "regression_df = regression_df.withColumn(\"DURATION\", col(\"DURATION\").cast(IntegerType()))\n",
-        "\n",
-        "# Categorical columns\n",
-        "categorical_cols = [\n",
-        "    \"EDUCATION_LEVELS_NAME\", \"EMPLOYMENT_TYPE_NAME\", \"REMOTE_TYPE_NAME\", \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\"\n",
-        "]\n",
-        "\n",
-        "# Cast boolean columns to integer\n",
-        "regression_df = regression_df.withColumn(\"IS_INTERNSHIP\", col(\"IS_INTERNSHIP\").cast(IntegerType()))\n",
-        "regression_df = regression_df.withColumn(\"COMPANY_IS_STAFFING\", col(\"COMPANY_IS_STAFFING\").cast(IntegerType()))\n",
-        "\n",
-        "\n",
-        "regression_df.show(5, truncate=False)\n",
-        "\n",
-        "\n",
-        "\n",
         "\n"
       ]
     },
@@ -250,18 +210,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "---- REMOTE_TYPE_NAME ----\n"
-          ]
-        },
-        {
           "name": "stderr",
           "output_type": "stream",
           "text": [
@@ -272,91 +224,30 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "+----------------+\n",
-            "|REMOTE_TYPE_NAME|\n",
-            "+----------------+\n",
-            "|Remote          |\n",
-            "|On Premise      |\n",
-            "|Hybrid          |\n",
-            "|Undefined       |\n",
-            "+----------------+\n",
-            "\n",
-            "\n",
-            "---- EMPLOYMENT_TYPE_NAME ----\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "                                                                                \r"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "+--------------------+\n",
-            "|EMPLOYMENT_TYPE_NAME|\n",
-            "+--------------------+\n",
-            "|Flexible            |\n",
-            "|Fulltime            |\n",
-            "|Parttime            |\n",
-            "+--------------------+\n",
-            "\n",
-            "\n",
-            "---- EDUCATION_LEVELS_NAME ----\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "[Stage 62:>                                                         (0 + 1) / 1]\r"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "+---------------------------------------------------------------------------------------------+\n",
-            "|EDUCATION_LEVELS_NAME                                                                        |\n",
-            "+---------------------------------------------------------------------------------------------+\n",
-            "|\"Bachelor's degree\"                                                                          |\n",
-            "|\"Master's degree\",  \"Ph.D. or professional degree\"                                           |\n",
-            "|\"High school or GED\",  \"Associate degree\"                                                    |\n",
-            "|\"High school or GED\",  \"Bachelor's degree\",  \"Master's degree\"                               |\n",
-            "|\"Bachelor's degree\",  \"Master's degree\"                                                      |\n",
-            "|\"Bachelor's degree\",  \"Master's degree\",  \"Ph.D. or professional degree\"                     |\n",
-            "|\"High school or GED\",  \"Associate degree\",  \"Bachelor's degree\"                              |\n",
-            "|\"Master's degree\"                                                                            |\n",
-            "|\"Associate degree\",  \"Bachelor's degree\"                                                     |\n",
-            "|\"High school or GED\",  \"Bachelor's degree\"                                                   |\n",
-            "|\"High school or GED\"                                                                         |\n",
-            "|\"No Education Listed\"                                                                        |\n",
-            "|\"Associate degree\"                                                                           |\n",
-            "|\"Associate degree\",  \"Bachelor's degree\",  \"Master's degree\"                                 |\n",
-            "|\"Ph.D. or professional degree\"                                                               |\n",
-            "|\"Bachelor's degree\",  \"Ph.D. or professional degree\"                                         |\n",
-            "|\"High school or GED\",  \"Bachelor's degree\",  \"Ph.D. or professional degree\"                  |\n",
-            "|\"Associate degree\",  \"Bachelor's degree\",  \"Master's degree\",  \"Ph.D. or professional degree\"|\n",
-            "|\"High school or GED\",  \"Associate degree\",  \"Bachelor's degree\",  \"Master's degree\"          |\n",
-            "+---------------------------------------------------------------------------------------------+\n",
+            "+--------+--------------------+--------------------+---------------------+--------------------+----------------+--------+-------------+-------------------+----------------------+---------------------------+\n",
+            "|SALARY  |MIN_YEARS_EXPERIENCE|MAX_YEARS_EXPERIENCE|EDUCATION_LEVELS_NAME|EMPLOYMENT_TYPE_NAME|REMOTE_TYPE_NAME|DURATION|IS_INTERNSHIP|COMPANY_IS_STAFFING|median_salary_emp_type|median_salary_emp_type_name|\n",
+            "+--------+--------------------+--------------------+---------------------+--------------------+----------------+--------+-------------+-------------------+----------------------+---------------------------+\n",
+            "|116500.0|2                   |2                   |\"Bachelor's degree\"  |Fulltime            |Undefined       |6       |0            |0                  |116500                |116500                     |\n",
+            "|116500.0|7                   |7                   |\"No Education Listed\"|Fulltime            |Undefined       |18      |0            |1                  |116500                |116500                     |\n",
+            "|116500.0|1                   |1                   |\"No Education Listed\"|Fulltime            |Undefined       |8       |0            |1                  |116500                |116500                     |\n",
+            "|116500.0|1                   |1                   |\"Bachelor's degree\"  |Fulltime            |Undefined       |32      |0            |0                  |116500                |116500                     |\n",
+            "|131100.0|2                   |2                   |\"Bachelor's degree\"  |Fulltime            |Undefined       |11      |0            |0                  |116500                |116500                     |\n",
+            "+--------+--------------------+--------------------+---------------------+--------------------+----------------+--------+-------------+-------------------+----------------------+---------------------------+\n",
+            "only showing top 5 rows\n",
             "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "                                                                                \r"
           ]
         }
       ],
       "source": [
+        "# Categorical columns\n",
+        "categorical_cols = [ \"EDUCATION_LEVELS_NAME\", \"EMPLOYMENT_TYPE_NAME\", \"REMOTE_TYPE_NAME\", \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\"]\n",
+        "\n",
+        "# Cast boolean columns to integer\n",
+        "regression_df = regression_df.withColumn(\"IS_INTERNSHIP\", col(\"IS_INTERNSHIP\").cast(IntegerType()))\n",
+        "regression_df = regression_df.withColumn(\"COMPANY_IS_STAFFING\", col(\"COMPANY_IS_STAFFING\").cast(IntegerType()))\n",
+        "\n",
         "\n",
         "# Clean Remote Type Name\n",
-        "\n",
         "regression_df = regression_df.withColumn(\n",
         "    \"REMOTE_TYPE_NAME\",\n",
         "    when(col(\"REMOTE_TYPE_NAME\") == \"Remote\", \"Remote\")\n",
@@ -368,7 +259,6 @@
         ")\n",
         "\n",
         "# Clean Employment Type Name\n",
-        "\n",
         "regression_df = regression_df.withColumn(\n",
         "    \"EMPLOYMENT_TYPE_NAME\",\n",
         "    when(col(\"EMPLOYMENT_TYPE_NAME\") == \"Part-time / full-time\", \"Flexible\")\n",
@@ -385,12 +275,7 @@
         ")\n",
         "\n",
         "\n",
-        "\n",
-        "categorical_cols = [\"REMOTE_TYPE_NAME\", \"EMPLOYMENT_TYPE_NAME\", \"EDUCATION_LEVELS_NAME\"]\n",
-        "\n",
-        "for colname in categorical_cols:\n",
-        "    print(f\"\\n---- {colname} ----\")\n",
-        "    regression_df.select(colname).distinct().show(truncate=False)\n",
+        "regression_df.show(5, truncate=False)\n",
         "\n"
       ]
     }
