--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -30,13 +30,19 @@
         "  output: true\n",
         "  freeze: auto\n",
         "---\n",
-        "\n",
-        "# Load the Dataset"
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        " # 1. Load the Dataset"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -81,12 +87,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Missing Value Treatment"
+        "### Missing Value Treatment"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -160,7 +166,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Feature Engineering"
+        "# 2. Feature Engineering"
       ]
     },
     {
@@ -172,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -210,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -277,6 +283,69 @@
         "\n",
         "regression_df.show(5, truncate=False)\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Final Features Structure"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+--------+-------------------------------------------------------------+\n",
+            "|SALARY  |features                                                     |\n",
+            "+--------+-------------------------------------------------------------+\n",
+            "|116500.0|(30,[0,1,2,5,23,25,28,29],[2.0,2.0,6.0,1.0,1.0,1.0,1.0,1.0]) |\n",
+            "|116500.0|(30,[0,1,2,4,6,23,25,28],[7.0,7.0,18.0,1.0,1.0,1.0,1.0,1.0]) |\n",
+            "|116500.0|(30,[0,1,2,4,6,23,25,28],[1.0,1.0,8.0,1.0,1.0,1.0,1.0,1.0])  |\n",
+            "|116500.0|(30,[0,1,2,5,23,25,28,29],[1.0,1.0,32.0,1.0,1.0,1.0,1.0,1.0])|\n",
+            "|131100.0|(30,[0,1,2,5,23,25,28,29],[2.0,2.0,11.0,1.0,1.0,1.0,1.0,1.0])|\n",
+            "+--------+-------------------------------------------------------------+\n",
+            "only showing top 5 rows\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Index and One-Hot Encode\n",
+        "indexers = [\n",
+        "    StringIndexer(inputCol=col, outputCol=f\"{col}_idx\", handleInvalid=\"skip\")\n",
+        "    for col in categorical_cols\n",
+        "]\n",
+        "encoders = [\n",
+        "    OneHotEncoder(inputCol=f\"{col}_idx\", outputCol=f\"{col}_vec\")\n",
+        "    for col in categorical_cols\n",
+        "]\n",
+        "\n",
+        "# Assemble base features (for GLR and Random Forest)\n",
+        "assembler = VectorAssembler(\n",
+        "    inputCols=[\n",
+        "        \"MIN_YEARS_EXPERIENCE\", \"MAX_YEARS_EXPERIENCE\", \"DURATION\", \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\"\n",
+        "    ] + [f\"{col}_vec\" for col in categorical_cols],\n",
+        "    outputCol=\"features\"\n",
+        ")\n",
+        "\n",
+        "pipeline = Pipeline(stages=indexers + encoders + [assembler])\n",
+        "regression_data = pipeline.fit(regression_df).transform(regression_df)\n",
+        "\n",
+        "\n",
+        "regression_data.select(\"SALARY\", \"features\").show(5, truncate=False)\n"
       ]
     }
   ],
