--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -347,6 +347,77 @@
         "\n",
         "regression_data.select(\"SALARY\", \"features\").show(5, truncate=False)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 3. Train/Test Split"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(5039, 22)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(4070, 22)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Stage 281:>                                                        (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(969, 22)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "# Split Data\n",
+        "regression_train, regression_test = regression_data.randomSplit([0.8, 0.2], seed=42)\n",
+        "\n",
+        "print((regression_data.count(), len(regression_data.columns)))\n",
+        "print((regression_train.count(), len(regression_train.columns)))\n",
+        "print((regression_test.count(), len(regression_test.columns)))"
+      ]
     }
   ],
   "metadata": {
