added train/test data

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [
         {
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [
         {
@@ -105,59 +105,26 @@
       ],
       "source": [
         "# Missing Value Treatment\n",
-        "\n",
-        "from pyspark.sql import Window \n",
+        "from pyspark.sql import Window\n",
+        "from pyspark.sql.functions import col, when, isnan, count, expr, median\n",
         "from pyspark.sql import functions as F\n",
-        "from pyspark.sql.functions import col, when, isnan, count, expr\n",
         "\n",
-        "# Overall median salary\n",
-        "overall_median_salary = df.approxQuantile(\"SALARY\", [0.5], 0.01)[0]\n",
+        "# Calculate overall median salary\n",
+        "overall_median_salarly = df.approxQuantile(\"SALARY\", [0.5], 0.01)[0]\n",
         "\n",
-        "# Median salary by EMPLOYMENT_TYPE\n",
-        "median_by_employment_type = (\n",
-        "    df.groupBy(\"EMPLOYMENT_TYPE\")\n",
-        "      .agg(expr(\"percentile_approx(SALARY, 0.5)\").alias(\"median_salary_emp_type\"))\n",
-        ")\n",
-        "\n",
-        "#  Median salary by EMPLOYMENT_TYPE_NAME\n",
-        "median_by_employment_type_name = (\n",
-        "    df.groupBy(\"EMPLOYMENT_TYPE_NAME\")\n",
-        "      .agg(expr(\"percentile_approx(SALARY, 0.5)\").alias(\"median_salary_emp_type_name\"))\n",
-        ")\n",
-        "\n",
-        "# Impute SALARY\n",
-        "df_salary_imputed = (\n",
-        "    df.join(median_by_employment_type, on=\"EMPLOYMENT_TYPE\", how=\"left\")\n",
-        "      .join(median_by_employment_type_name, on=\"EMPLOYMENT_TYPE_NAME\", how=\"left\")\n",
-        "      .withColumn(\n",
-        "          \"SALARY\",\n",
-        "          F.when(\n",
-        "              col(\"SALARY\").isNull(),\n",
-        "              F.coalesce(\n",
-        "                  col(\"median_salary_emp_type\"),\n",
-        "                  col(\"median_salary_emp_type_name\"),\n",
-        "                  F.lit(overall_median_salary)\n",
-        "              )\n",
-        "          ).otherwise(col(\"SALARY\"))\n",
-        "      )\n",
-        "      .drop(\"median_salary_emp_type\", \"median_salary_emp_type_name\")\n",
-        ")\n",
+        "median_by_employment_type = df.groupBy(\"EMPLOYMENT_TYPE\").agg(expr(\"percentile_approx(SALARY, 0.5)\").alias(\"median_salary_emp_type\"))\n",
+        "median_by_employment_type_name = df.groupBy(\"EMPLOYMENT_TYPE_NAME\").agg(expr(\"percentile_approx(SALARY, 0.5)\").alias(\"median_salary_emp_type_name\"))\n",
         "\n",
         "# Join median values back to the original dataframe\n",
-        "df_salary_imputed = (\n",
-        "    df.join(median_by_employment_type, on=\"EMPLOYMENT_TYPE\", how=\"left\")\n",
-        "      .join(median_by_employment_type_name, on=\"EMPLOYMENT_TYPE_NAME\", how=\"left\")\n",
-        ")\n",
+        "df_salary_imputed = df.join(median_by_employment_type, on=\"EMPLOYMENT_TYPE\", how = \"left\").join(median_by_employment_type_name, on=\"EMPLOYMENT_TYPE_NAME\", how = \"left\")\n",
+        "\n",
         "\n",
         "# Replace missing SALARY values\n",
-        "df_salary_imputed = df_salary_imputed.withColumn(\n",
-        "    \"SALARY\",\n",
-        "    when(col(\"SALARY\").isNull(),\n",
-        "         when(col(\"median_salary_emp_type\").isNotNull(), col(\"median_salary_emp_type\"))\n",
-        "         .when(col(\"median_salary_emp_type_name\").isNotNull(), col(\"median_salary_emp_type_name\"))\n",
-        "         .otherwise(overall_median_salary)\n",
-        "    ).otherwise(col(\"SALARY\"))\n",
-        ")\n",
+        "df_salary_imputed=df_salary_imputed.withColumn(\"SALARY\", when(col(\"SALARY\").isNull(), \n",
+        "                                when (col(\"median_salary_emp_type\").isNotNull(), col(\"median_salary_emp_type\"))\n",
+        "                                .when(col(\"median_salary_emp_type_name\").isNotNull(), col(\"median_salary_emp_type_name\"))\n",
+        "                                .otherwise(overall_median_salarly)\n",
+        ").otherwise(col(\"SALARY\"))) \n",
         "\n",
         "\n"
       ]
@@ -178,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -187,19 +154,18 @@
         "from pyspark.ml.feature import StringIndexer, OneHotEncoder, VectorAssembler\n",
         "from pyspark.ml import Pipeline\n",
         "from pyspark.sql.types import BooleanType, StringType, IntegerType\n",
-        "from pyspark.sql.types import IntegerType, DoubleType, DecimalType\n",
         "from pyspark.sql.functions import regexp_replace, trim\n",
         "\n",
         "# Drop rows with NA values \n",
         "regression_df = df_salary_imputed.dropna(subset=[\n",
         "    \"SALARY\", \"MIN_YEARS_EXPERIENCE\", \"MAX_YEARS_EXPERIENCE\",\n",
         "    \"EDUCATION_LEVELS_NAME\", \"EMPLOYMENT_TYPE_NAME\", \"REMOTE_TYPE_NAME\",\n",
-        "    \"DURATION\", \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\"\n",
+        "    \"DURATION\", \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\",\"median_salary_emp_type\", \"median_salary_emp_type_name\"\n",
         "]).select(\n",
         "    \"SALARY\", \"MIN_YEARS_EXPERIENCE\", \"MAX_YEARS_EXPERIENCE\",\n",
         "    \"EDUCATION_LEVELS_NAME\", \"EMPLOYMENT_TYPE_NAME\", \"REMOTE_TYPE_NAME\",\n",
-        "    \"DURATION\", \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\",\n",
-        "    \"median_salary_emp_type\", \"median_salary_emp_type_name\"\n",
+        "    \"DURATION\", \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\",\"median_salary_emp_type\", \"median_salary_emp_type_name\"\n",
+        "   \n",
         ")\n",
         "\n",
         "# Cast Duration to integer\n",
@@ -216,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [
         {
@@ -294,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
@@ -324,28 +290,16 @@
       ],
       "source": [
         "# Index and One-Hot Encode\n",
-        "indexers = [\n",
-        "    StringIndexer(inputCol=col, outputCol=f\"{col}_idx\", handleInvalid=\"skip\")\n",
-        "    for col in categorical_cols\n",
-        "]\n",
-        "encoders = [\n",
-        "    OneHotEncoder(inputCol=f\"{col}_idx\", outputCol=f\"{col}_vec\")\n",
-        "    for col in categorical_cols\n",
-        "]\n",
+        "indexers = [StringIndexer(inputCol=col, outputCol=f\"{col}_idx\", handleInvalid=\"skip\") for col in categorical_cols]\n",
+        "encoders = [OneHotEncoder(inputCol=f\"{col}_idx\", outputCol=f\"{col}_vec\") for col in categorical_cols]\n",
         "\n",
-        "# Assemble base features (for GLR and Random Forest)\n",
-        "assembler = VectorAssembler(\n",
-        "    inputCols=[\n",
-        "        \"MIN_YEARS_EXPERIENCE\", \"MAX_YEARS_EXPERIENCE\", \"DURATION\", \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\"\n",
-        "    ] + [f\"{col}_vec\" for col in categorical_cols],\n",
-        "    outputCol=\"features\"\n",
-        ")\n",
+        "#Assemble base features\n",
+        "assembler = VectorAssembler(inputCols=[\"MIN_YEARS_EXPERIENCE\", \"MAX_YEARS_EXPERIENCE\", \"DURATION\", \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\"] + [f\"{col}_vec\" for col in categorical_cols], outputCol=\"features\")\n",
+        "\n",
         "\n",
         "pipeline = Pipeline(stages=indexers + encoders + [assembler])\n",
-        "regression_data = pipeline.fit(regression_df).transform(regression_df)\n",
-        "\n",
-        "\n",
-        "regression_data.select(\"SALARY\", \"features\").show(5, truncate=False)\n"
+        "regression_data =  pipeline.fit(regression_df).transform(regression_df)\n",
+        "regression_data.select(\"SALARY\",\"features\").show(5, truncate=False)"
       ]
     },
     {
@@ -357,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -392,21 +346,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 281:>                                                        (0 + 1) / 1]\r"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "(969, 22)\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "                                                                                \r"
+            "[Stage 912:>                (0 + 1) / 1][Stage 913:>                (0 + 1) / 1]\r"
           ]
         }
       ],
