added train/test data

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -311,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [
         {
@@ -346,7 +346,21 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 912:>                (0 + 1) / 1][Stage 913:>                (0 + 1) / 1]\r"
+            "[Stage 916:>                                                        (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(969, 22)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
           ]
         }
       ],
